spec/invalid/undefined_client_value.expr.disassembled
[
    (
        CompileError(
            Undefined(
                "@a",
            ),
        ),
        0..2,
    ),
]